fix sticky underline bug on mobile

--- a/src/components/atoms/SiteName/styles.module.scss
+++ b/src/components/atoms/SiteName/styles.module.scss
@@ -27,7 +27,7 @@
 		}
 	}
 
-	@media screen and (max-width: $screenSmall) {
-		position: initial;
-	}
+	// @media screen and (max-width: $screenSmall) {
+	// 	position: initial;
+	// }
 }
